--- a/app/static/css/header.css
+++ b/app/static/css/header.css
@@ -31,7 +31,6 @@
     position: fixed;
     display: flex;
     background-color: #000000;
-    opacity: 0.7;
     width: 100%;
     height: 100%;
     top: 0;
@@ -442,10 +441,14 @@
     }
 
     .header .header-mobile .logo {
+        display: block;
+        float: left;
         width: 175px;
+        margin-left: 10px;
     }
 
     .header .header-mobile .options {
+        justify-self: right;
         font-size: 20px;
         width: min-content;
         box-sizing: border-box;
@@ -454,7 +457,7 @@
     }
 
     .header .header-mobile .options .options-button {
-        display: block;
+        display: flex;
     }
 
     .web .header .header-1part {
