--- a/app/templates/posts/my_posts.html
+++ b/app/templates/posts/my_posts.html
@@ -1,18 +1,22 @@
 <div class="myposts">
     <h1 class="m-title">Minhas Postagens</h1>
-    <div class="my-posts">
-        {% for post in posts %}
-            <div class="body-post">
-                <img src="{{ post.cover_image }}" alt="" class="cover">
-                <h1 class="title">{{ post.title }}</h1>
-                <div class="options">
-                    <a href="{{ url_for('notice', id=post.id) }}" class="see">VER</a>
-                    <a href="{{ url_for('edit_post', id=post.id) }}" class="edit">EDITAR</a>
-                    <a href="{{ url_for('delete_post', id=post.id) }}" class="delete">DELETAR</a>
+    {% if num_posts != 0 %}
+        <div class="my-posts">
+            {% for post in posts %}
+                <div class="body-post">
+                    <img src="{{ post.cover_image }}" alt="" class="cover">
+                    <h1 class="title">{{ post.title }}</h1>
+                    <div class="options">
+                        <a href="{{ url_for('notice', id=post.id) }}" class="see">VER</a>
+                        <a href="{{ url_for('edit_post', id=post.id) }}" class="edit">EDITAR</a>
+                        <a href="{{ url_for('delete_post', id=post.id) }}" class="delete">DELETAR</a>
+                    </div>
+                    <p>{{ DatePost(post.addedAt) }}</p>
                 </div>
-                <p>{{ DatePost(post.addedAt) }}</p>
-            </div>
-        {% endfor %}
-    </div>    
+            {% endfor %}
+        </div>
+    {% else %}
+        <span class="none-posts">Você ainda não fez nenhuma postagem. Clique em "NOVA POSTAGEM" para fazer uma nova!</span>
+    {% endif %}
     {% include 'components/pagination.html' %}
 </div>
