--- a/app/static/css/editor.css
+++ b/app/static/css/editor.css
@@ -21,35 +21,6 @@
     transition: all 0.2s linear;
 }
 
-.editor .editor-header button{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 2%;
-    background-color: #FFFFFF;
-    border: 1px solid #BBC0C4;
-    padding: 5px;
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    transition: all 0.1s linear;
-}
-
-.editor .editor-header button:hover {
-    cursor: pointer;
-    opacity: 0.6;
-}
-
-.editor .editor-header button:active {
-    background-color: #BBC0C4;
-}
-
-.editor .editor-header button:focus{
-    box-shadow: 0 0 0 0;
-    border: 1px solid #BBC0C4;
-    outline: 0;
-}
-
 .editor .editor-header label {
     display: flex;
     align-items: center;
@@ -60,6 +31,8 @@
     padding: 5px;
     width: 25px;
     height: 25px;
+    max-width: 25px;
+    max-height: 25px;
     border-radius: 50%;
     transition: all 0.1s linear;
 }
@@ -79,7 +52,7 @@
     outline: 0;
 }
 
-.editor .editor-header button i {
+.editor .editor-header label i {
     color: #5f6368;
 }
 
@@ -104,5 +77,39 @@
         margin: 0 auto;
         width: 100%;
         height: 60vh;
+    }
+
+    .editor .editor-header label {
+        align-items: center;
+        justify-content: center;
+        margin: 2% 2%;
+        background-color: #FFFFFF;
+        border: 1px solid #BBC0C4;
+        padding: 5px;
+        width: 40px;
+        height: 40px;
+        max-width: 25px;
+        max-height: 25px;
+        border-radius: 50%;
+        transition: all 0.1s linear;
+    }
+    
+    .editor .editor-header label:hover {
+        cursor: pointer;
+        opacity: 0.6;
+    }
+    
+    .editor .editor-header label:active {
+        background-color: #BBC0C4;
+    }
+    
+    .editor .editor-header label:focus{
+        box-shadow: 0 0 0 0;
+        border: 1px solid #BBC0C4;
+        outline: 0;
+    }
+    
+    .editor .editor-header label i {
+        color: #5f6368;
     }
 }
