--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -14,11 +14,17 @@
                         <form action="" method="post" novalidate>
                             {{ form.hidden_tag() }}
                             {% with messages = get_flashed_messages() %}
-                            {% if messages %}
-                            {% for message in messages %}
-                                <span class="error">{{ message }}</span>
-                            {% endfor %}
-                            {% endif %}
+                                {% if messages %}
+                                    {% for message in messages %}
+                                        {% if message == 'Please log in to access this page.' %}
+                                            <span class="error">Faça o login para acessar essa página.</span>
+                                        {% elif message == 'Please reauthenticate to access this page.' %}
+                                            <span class="error">Autentique-se novamente para acessar essa página.</span>
+                                        {% else %}
+                                            <span class="error">{{ message }}</span>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
                             {% endwith %}
                             {{ form.username(class_="form-inputs", placeholder="Nome de usuário", maxlength="16", required=True) }}
                             {{ form.password(class_="form-inputs",  placeholder="Senha", maxlength="16") }}
